--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>mikes web page</title>
+	<title>Mikes</title>
 </head>
 <body>
 
-	<p>Under Work</p>
+	<h1>Under Work</h1>
 
 </body>
 </html>
