--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Mikes</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
 	<h1>Under Work</h1>
+	<img src="images/image 1.jpg">
 
 </body>
 </html>
