--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 
-	<h1>Under Work</h1>
-	<img src="images/image 1.jpg">
+	<img id="bg" src="images/image 1.jpg">
 
 </body>
 </html>
